<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/mainFragment">

    <fragment
        android:id="@+id/mainFragment"
        android:name="application.ui.pages.MainFragment"
        tools:layout="@layout/main_fragment" />

    <fragment
        android:id="@+id/analyseGroupsFragment"
        android:name="application.ui.pages.analyse_groups.AnalyseGroupsFragment"
        android:label="@string/analyses"
        tools:layout="@layout/analyse_groups_fragment">

        <action
            android:id="@+id/action_analyseGroupsFragment_to_analysesFragment"
            app:destination="@id/analysesFragment"
            app:enterAnim="@anim/enter_slide"
            app:exitAnim="@anim/exit_slide"
            app:popEnterAnim="@anim/pop_enter_slide"
            app:popExitAnim="@anim/pop_exit_slide"/>

    </fragment>

    <fragment
        android:id="@+id/analysesFragment"
        android:name="application.ui.pages.analyses.AnalysesFragment"
        tools:layout="@layout/analyse_types_fragment" >

        <argument android:defaultValue="-1"
            android:name="groupId"
            app:argType="integer"/>

    </fragment>

    <fragment
        android:id="@+id/dietFragment"
        android:name="application.ui.pages.diet.DietFragment"
        android:label="@string/diet"
        tools:layout="@layout/diet_fragment"/>


    <fragment
        android:id="@+id/settingsFragment"
        android:name="application.ui.pages.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/settings_fragment"/>

    <fragment
        android:id="@+id/consultationFragment"
        android:name="application.ui.pages.consultation.ConsultationFragment"
        android:label="@string/consultation"
        tools:layout="@layout/consultation_fragment"/>

    <fragment
        android:id="@+id/aboutFragment"
        android:name="application.ui.pages.about.AboutFragment"
        android:label="@string/about_course"
        tools:layout="@layout/about_fragment"/>

    <fragment
        android:id="@+id/faqFragment"
        android:name="application.ui.pages.faq.FaqFragment"
        android:label="@string/faq"
        tools:layout="@layout/faq_fragment"/>

    <fragment
        android:id="@+id/coursesFragment"
        android:name="application.ui.pages.courses.CoursesFragment"
        android:label="@string/my_courses"
        tools:layout="@layout/courses_fragment">

        <action android:id="@+id/action_coursesFragment_to_courseFragment"
            app:destination="@id/courseFragment"
            app:enterAnim="@anim/enter_slide"
            app:exitAnim="@anim/exit_slide"
            app:popEnterAnim="@anim/pop_enter_slide"
            app:popExitAnim="@anim/pop_exit_slide"/>

    </fragment>

    <fragment
        android:id="@+id/courseFragment"
        android:name="application.ui.pages.courses.course.CourseFragment"
        tools:layout="@layout/course_fragment" >

        <argument android:defaultValue="-1"
            android:name="courseId"
            app:argType="integer"/>

    </fragment>

    <fragment
        android:id="@+id/cbjuFragment"
        android:name="application.ui.pages.cbju.CbjuFragment"
        android:label="Расчет КБЖУ"
        tools:layout="@layout/cbju_fragment" />

</navigation>